# pico-webserver

./: .gitignore  CMakeLists.txt  fsdata.c  lwipopts.h  tusb_lwip_glue.c  tusb_lwip_glue.h  web.cpp  webserver.cpp
W25Q64/: CMakeLists.txt  W25Q64.cpp  W25Q64.h
fs/: done.html  index.html  manage.html  param.json  restore.html  success.html  swupdate.html  wavemap.shtml  wavemaps.json
fs/css/: josh_styles.css
fs/data/: test.rtf
fs/js/: searchtool.js
include/: CMakeLists.txt  filesys.cpp  filesys.h
testfiles/: wavemaps.json
webserver/: CMakeLists.txt  tusb_lwip_glue.c  tusb_lwip_glue.h  webserver.cpp  webserver.h
